# Pendulum_C

./: CMakeLists.txt
src/: main.c
src/libraries/loging_bfo/: log.h
src/libraries/string_bfo/: String_struct.c
src/libraries/terminal_bfo/colors_bfo/: colors.h
src/libraries/tests_bfo/: test_funcs.c  test_funcs.h
